--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>[비공식] Tesla Model 3 Korea</title>
+    <title>테슬라 모델 3</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
