--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#cc0000" />
+    <meta name="title" content="Tesla Model 3 Korea">
+    <meta name="author" content="백종열">
+    <meta name="keyword" content="테슬라 모델3, 테슬라 모델 3, tesla model 3, model 3">
+    <meta name="description" content="테슬라 모델 3 가격 계산 및 정보 제공">
     <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
