메타 정보 추가

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <meta name="author" content="백종열">
     <meta name="keyword" content="테슬라 모델3, 테슬라 모델 3, tesla model 3, model 3">
     <meta name="description" content="테슬라 모델 3 가격 계산 및 정보 제공">
+    <meta name="google-site-verification" content="azMTDDgjftC9SGwqNqaRJxbnGmPcgh7Lx9X8RjxEC_0" />
+
     <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
