--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#cc0000" />
-    <meta name="title" content="Tesla Model 3 Korea">
+    <meta name="title" content="Tesla Model 3 얼리버드">
     <meta name="author" content="백종열">
     <meta name="keyword" content="테슬라 모델3, 테슬라 모델 3, tesla model 3, model 3">
     <meta name="description" content="테슬라 모델 3 가격 계산 및 정보 제공">
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>테슬라 모델 3</title>
+    <title>Tesla Model 3 얼리버드</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
